--- a/Portfolio-master/index.html
+++ b/Portfolio-master/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio | Abhiram chaturvedi</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/mediaqueries.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="mediaqueries.css">
         <script src="https://kit.fontawesome.com/09259f818e.js" crossorigin="anonymous"></script>
-        <link rel="shortcut icon" href="images/portfolio.png" type="image/x-icon">
+        <link rel="shortcut icon" href="portfolio.png" type="image/x-icon">
     </head>
 <body>
     <!-- Navbar starts -->
@@ -32,7 +32,7 @@
             <a href="#contact"><i class="fa-solid fa-phone"></i></a>
         </div>
         <header class="flex just-sb">
-            <a href="#" class="logo"><img src="images/bag.png" alt="">Portfolio</a>
+            <a href="#" class="logo"><img src="bag.png" alt="">Portfolio</a>
             <nav class="flex">
                 <a href="#home">Home</a>
                 <a href="#skills">Skills</a>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="image">
-                <img src="images/Profile picture (1).jpg" alt="Abhiram Chaturvedi">
+                <img src="Profile picture (1).jpg" alt="Abhiram Chaturvedi">
                 <!-- <div class="triangle"></div> -->
             </div>
         </section>
@@ -84,43 +84,43 @@
                 <div class="container">
                     <div class="skill flex">
                         <!-- <div class="image"> -->
-                            <img src="images/java.png" alt="java icon">
+                            <img src="java.png" alt="java icon">
                         <!-- </div> -->
                         <p>Java</p>
                     </div>
                     <div class="skill flex">
                         <!-- <div class="image"> -->
-                            <img src="images/python.png" alt="python icon">                   
+                            <img src="python.png" alt="python icon">                   
                         <!-- </div> -->
                         <p>Python</p>
                     </div>
                     <div class="skill flex">
                         <!-- <div class="image"> -->
-                            <img src="images/html-5.png" alt="html5 icon">           
+                            <img src="html-5.png" alt="html5 icon">           
                         <!-- </div> -->
                         <p>HTML5</p>
                     </div>
                     <div class="skill flex">
                         <!-- <div class="image"> -->
-                            <img src="images/css-3.png" alt="">
+                            <img src="css-3.png" alt="">
                         <!-- </div> -->
                         <p>CSS</p>
                     </div>
                     <div class="skill flex">
                         <!-- <div class="image"> -->
-                            <img src="images/java-script.png" alt="">
+                            <img src="java-script.png" alt="">
                         <!-- </div> -->
                         <p>JavaScript</p>
                     </div>
                     <div class="skill flex">
                         <!-- <div class="image"> -->
-                            <img src="images/reactjs.png" alt="">
+                            <img src="reactjs.png" alt="">
                         <!-- </div> -->
                         <p>ReactJS</p>
                     </div>
                     <div class="skill flex">
                         <!-- <div class="image"> -->
-                            <img src="images/node-js.png" alt="">
+                            <img src="node-js.png" alt="">
                         <!-- </div> -->
                         <p>NodeJS</p>
                     </div>
@@ -143,11 +143,11 @@
         <!-- About Section starts -->
         <section class="about flex just-se border" id="about">
             <div class="title">
-                <h1 class="heading"><img class="icon-animation" src="images/about-me.png" alt="">About Me</h1>
+                <h1 class="heading"><img class="icon-animation" src="about-me.png" alt="">About Me</h1>
             </div>
             <div class="content flex just-sb">
                 <div class="image">
-                    <img src="images/about.apng" alt="">
+                    <img src="about.apng" alt="">
                 </div>
                 <div class="details flex">
                     <!-- <h2>I'm <span>Aryan Jain</span></h2> -->
@@ -162,10 +162,10 @@
     
         <!-- Education Section starts -->
         <section class="education border" id="education">
-            <h1 class="heading"><img class="icon-animation" src="images/education.png" alt="">My Education</h1>
+            <h1 class="heading"><img class="icon-animation" src="education.png" alt="">My Education</h1>
             <div class="school-items">
                 <div class="school flex">
-                    <img src="images/clg.jpeg" alt="">
+                    <img src="clg.jpeg" alt="">
                     <div class="school-info">
                         <h2>B. Tech. in Computer Science Engineering</h2>
                         <p>Technocrats Group of Institutions Bhopal</p>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="school flex">
-                    <img src="images/school.jpg" alt="">
+                    <img src="school.jpg" alt="">
                     <div class="school-info">
                         <h2>Class XII | Science</h2>
                         <p>ST.Joseph's Eng. Med. Sen.Sec. School Mahoba | CBSE Board</p>
@@ -186,13 +186,13 @@
     
         <!-- Contact me Section starts -->
         <section class="contact border" id="contact">
-            <h1 class="heading"><img class="icon-animation" src="images/contact.png" alt="">Get in touch</h1>
+            <h1 class="heading"><img class="icon-animation" src="contact.png" alt="">Get in touch</h1>
             <div class="flex just-se">
                 <div class="image">
                     <!-- <video autoplay loop>
-                        <source src="../images/contact-info.mp4">
+                        <source src="../contact-info.mp4">
                     </video> -->
-                    <img src="images/contact-info.apng" alt="">
+                    <img src="contact-info.apng" alt="">
                 </div>
                 <div class="contact-details">
                     <form class="contact-form" action="#" method="get">
